harness/test/errors/032_type_mismatch_num_as_str.eu
# Type mismatch: pass number where string expected (str.split)
x: str.split(42, ",")
